<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/cool_bg">

  <!--    Your application icon-->
  <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:src="@mipmap/ic_launcher"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.35">

    <!--        Email Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/white"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/emailRegister"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:inputType="text"
          android:maxLength="40"
          android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--        Password Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/white"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/white">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/passwordRegister"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:inputType="textPassword"
          android:maxLength="40"
          android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.7">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="end|center_vertical"
        android:paddingHorizontal="10dp"
        android:text="@string/already_have_account"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
  </LinearLayout>

  <!--    Create a New Account Button-->
  <com.google.android.material.button.MaterialButton
      android:id="@+id/createAccountBtn"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.6"
      android:text="@string/create_account"/>

  <com.google.android.gms.common.SignInButton
      android:id="@+id/googleBtn"
      android:layout_width="150dp"
      android:layout_height="60dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.8" />

  </androidx.constraintlayout.widget.ConstraintLayout>